<resources>
    <string name="app_name">Assistant</string>
    <string name="shop_main_title">Sample title</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="register">Зарегистрироваться</string>
    <string name="email">email</string>
    <string name="registration">Регистрация</string>
    <string name="password">password</string>
    <string name="singIn">Вход</string>
    <string name="logIn">войти</string>
    <string name="sample_product_name">Sample product name</string>
    <string name="sample_product_price">25 BYN</string>
    <string name="sample_product_weight">100000g</string>
    <string name="sample_product_manufacturer">Belarus</string>
    <string name="button_select_shop_text">Выбрать магазин</string>
    <string name="shop_name">Shop name sample</string>
    <string name="shop_description">Sample description</string>
    <string name="shop_country_and_city">Country, city</string>
    <string name="shop_address">Address</string>
    <string name="product_quantity">1</string>
    <string name="payment_button_text">Оплатить</string>
    <string name="price_currency_text">BYN</string>
    <string name="total_price">0</string>
    <string name="empty_cart_text">Воспользуйтесь сканером штрихкодов для ее пополнения</string>
    <string name="empty_cart_headline">Ваша Корзина Пуста</string>
    <string name="logout">Выход</string>
    <string name="logout_text">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">нет</string>
    <string name="delete_cart_item_headline">Удалить Товар</string>
    <string name="delete_cart_item_text">Вы действительно хотите удалить этот продукт?</string>
    <string name="sorry_message">Извините</string>
    <string name="product_not_found">Продукт не найден</string>
    <string name="shop_not_selected_headline">Магазин не выбран</string>
    <string name="shop_not_selected_text">Давайте выберем?</string>
    <string name="payment_success">Оплата Совершена</string>
    <string name="payment_success_text">Спасибо за покупку!</string>
</resources>