<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200"
    tools:context=".auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="80sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:text="@string/singIn"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/green_700"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/gray_700" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textSize="16sp"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/green_700"
            app:met_singleLineEllipsis="true"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/gray_700" />

        <TextView
            android:id="@+id/moveToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/green_700" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/auth_button"
        android:fontFamily="serif-monospace"
        android:textSize="18dp"
        android:text="@string/logIn"
        android:textColor="@color/white" />

</RelativeLayout>