<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_200">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/horizontal_bar_cart"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/cart_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray_200"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:layout_above="@id/horizontal_bar_cart"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        android:gravity="center"
        android:padding="15dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/empty_cart_box"
            android:backgroundTint="@color/green_700"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:layout_marginTop="10dp"
            android:textSize="26sp"
            android:text="@string/empty_cart_headline"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/gray_700"
            android:text="@string/empty_cart_text"
            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:id="@+id/horizontal_bar_cart"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/green_700"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_above="@id/payment_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/payment_bar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:weightSum="6"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:textAlignment="textEnd"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/price_currency_text"
                android:textColor="@color/dark_blue"
                android:textSize="25sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/payment_button_text"
            android:textColor="@color/white"
            android:clickable="false"
            android:background="@drawable/confirm_payment_button"
            />

    </LinearLayout>

</RelativeLayout>
