<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f9faff">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:id="@+id/image_frame"
                android:background="@color/white">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/product_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/morgen"
                    app:riv_corner_radius="5dp"
                    app:riv_border_width="1dp"
                    app:riv_border_color="@color/dark_blue"/>

            </FrameLayout>

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_product_name"
                android:layout_toEndOf="@id/image_frame"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/product_name"
                android:layout_marginTop="33dp"

                >

                <TextView
                    android:id="@+id/product_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_product_weight"
                    android:textColor="@color/gray_700"

                    />

                <TextView
                    android:id="@+id/product_manufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_product_manufacturer"
                    android:textColor="@color/gray_700"
                    android:layout_marginLeft="5dp"
                    />

            </LinearLayout>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/product_name"
                android:layout_marginTop="55dp"
                android:text="@string/sample_product_price"
                android:textColor="@color/green_700"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/product_price"/>




        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>