<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_logout"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/dialog_logout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logout_image"
            android:maxWidth="30dp"
            android:maxHeight="30dp" />

        <TextView
            android:id="@+id/dialog_logout_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dialog_logout_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/logout_text"
            android:textAlignment="center"
            android:textColor="@color/gray_700"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_700"
        app:layout_constraintBottom_toTopOf="@id/dialog_logout_no_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_logout_yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_buttons"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/yes"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_logout_button_divider"/>

    <View
        android:id="@+id/dialog_logout_button_divider"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@color/gray_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_logout_no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_buttons"
        android:elevation="0dp"
        android:text="@string/no"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_logout_button_divider"
        style="?android:attr/borderlessButtonStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>